--- a/crates/nu-protocol/Cargo.toml
+++ b/crates/nu-protocol/Cargo.toml
@@ -23,7 +23,7 @@ indexmap = { version = "1.7" }
 lru = "0.10"
 miette = { version = "5.9", features = ["fancy-no-backtrace"] }
 num-format = "0.4"
-serde = { version = "1.0", default-features = false }
+serde = { version = "1.0", default-features = false, features = ["rc"]}
 serde_json = { version = "1.0", optional = true }
 strum = "0.24"
 strum_macros = "0.24"
